Updated index.html with latest changes

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						</header>
 						<p>I am passionate about harnessing the power of data to uncover patterns, solve complex challenges, and drive meaningful change. With a keen interest in predictive modeling and analytics, I find joy in applying these skills to areas like sports and sports betting, where strategy meets data-driven insights. My mission is to explore innovative solutions that blend technical expertise with real-world applications, creating impactful results in both professional and personal pursuits.</p>
 						<ul class="actions">
-							<li><a href="#" class="button">About Meee</a></li>
+							<li><a href="#" class="button">About Omar</a></li>
 						</ul>
 					</section>
 
