Updated index.html and added Project 1 folder

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="/Users/orlandobrandon/Desktop/Portfolio Files/sports_betting_data.html" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Project 1 Intro and Pre-Processing</h3>
+								<a href="sports_betting_data.html" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
+								<h3>Project 1 DRAFT Intro and Pre-Processing</h3>
 								<p>If there is an issue opening the file Please let me know.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
