--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="sports_betting_data.html" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Project 1 DRAFT Intro and Pre-Processing</h3>
+								<h3>Project 1</h3>
 								<p>If there is an issue opening the file Please let me know.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
