--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="sports_betting_data.html" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
+								<a href="Project_1/sports_betting_data.html" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
 								<h3>Project 1</h3>
 								<p>If there is an issue opening the file Please let me know.</p>
 							</article>
