--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://nbviewer.org/github/OrlandoBrandon/portfolio/blob/main/Project_1/sports_betting_data.ipynb" class="image fit thumb">
+								<a href="https://nbviewer.org/github/OrlandoBrandon/portfolio/blob/main/Project_1/sports_betting_data.ipynb" target="_blank" class="image fit thumb">
 
 								<h3>Project 1</h3>
 								<p>If there is an issue opening the file Please let me know.</p>
