--- a/index.html
+++ b/index.html
@@ -44,13 +44,12 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
     <a href="https://nbviewer.org/github/OrlandoBrandon/portfolio/blob/main/Project_1/sports_betting_data.ipynb" 
-       target="_blank" class="image fit thumb">
+       target="_blank" class="image fit">
        <img src="images/thumbs/01.jpg" alt="Project 1 Thumbnail" />
     </a>
     <h3>Project 1</h3>
     <p>If there is an issue opening the file, please let me know.</p>
 </article>
-
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
 								<h3>Project 2</h3>
