--- a/index.html
+++ b/index.html
@@ -38,6 +38,19 @@
 						</ul>
 					</section>
 
+				<!-- Direct Link to Jupyter Notebook -->
+<section id="notebook-link">
+    <h2>Project 1: Sports Betting Data Analysis</h2>
+    <p>
+        You can view my Jupyter Notebook analysis here: 
+        <a href="https://nbviewer.org/github/OrlandoBrandon/portfolio/blob/main/Project_1/sports_betting_data.ipynb" 
+           target="_blank">
+           Sports Betting Data Analysis Notebook
+        </a>.
+    </p>
+</section>
+
+
 				<!-- Two -->
 					<section id="two">
 						<h2>Recent Work</h2>
