update to Projects
project updates

--- a/index.html
+++ b/index.html
@@ -105,19 +105,19 @@
 					<div class="project-card">
 						<h3> Group Project On Gross Domestic Product</h3>
 						<p>You can view my Jupyter Notebook analysis here:</p>
-						<a href="/Users/orlandobrandon/Desktop/Portfolio Files/orlandobrandon.github.io/Project 1 Technical Report .pdf" class="button">📂 View Analysis</a>
+						<a href="Projects/Technical_Report.pdf" class="button">📂 View Analysis</a>
 					</div>
 
 					<div class="project-card">
 						<h3> Group Project on Generalized Trust </h3>
 						<p>You can view my Jupyter Notebook analysis here:</p>
-						<a href="/Users/orlandobrandon/Desktop/Portfolio Files/orlandobrandon.github.io/Group 13 - Final Report (1).pdf" class="button">📂 View Analysis</a>
+						<a href="Projects/Final_Report.pdf" class="button">📂 View Analysis</a>
 					</div>
 
 					<div class="project-card">
 						<h3> Group Project on Auto theft, Social disorganization:</h3>
 						<p>You can view my Jupyter Notebook analysis here:</p>
-						<a href="/Users/orlandobrandon/Desktop/Portfolio Files/orlandobrandon.github.io/group13.pdf" class="button">📂 View Analysis</a>
+						<a href="Projects/group13.pdf" class="button">📂 View Analysis</a>
 					</div>
 					
 
