--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 					<div class="project-card">
 						<h3> Project 2</h3>
 						<p>You can view my Jupyter Notebook analysis here:</p>
-						<a href="https://nbviewer.org/github/OrlandoBrandon/portfolio/blob/main/Project_2/data_mining.ipynb" class="button">📂 View Analysis</a>
+						<a href="https://nbviewer.org/github/OrlandoBrandon/orlandobrandon.github.io/blob/main/Project%202%20Data%20mining%20/Project%202%20Blood%20Pressure%20analysis.ipynb" class="button">📂 View Analysis</a>
 					</div>
 
 					<div class="project-card">
